package medbot.person;

public enum PersonType {
    PATIENT, DOCTOR, NURSE
}
